<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="menu_samplereg">Prøveregistrering</string>
	<string name="menu_dosereg">Doseregistrering</string>
	<string name="menu_contamreg">Måleprotokoll (personer)</string>
	<string name="app_name">radiac</string>
    <string name="referanse">Referansemåling</string>
	<string name="othermeasurement">Annen måling</string>
	<string name="startmeasure">Start måling</string>
	<string name="LocName">Stedsnavn</string>
	<string name="AdmName">Kommune</string>
	<string name="measValue">Doserate</string>
	<string name="stopmeasure">Stopp måling</string>
	<string name="confirm">Bekreft</string>
	<string name="undo">Angre</string>
	<string name="comment">Kommentar</string>
	<string name="meastime">Måletid</string>
	<string name="latitude">Breddegrad</string>
	<string name="longitude">Lengdegrad</string>
	<string name="north">N</string>
	<string name="east">Ø</string>
	<string name="rainduring">Regn under måling</string>
	<string name="rainbefore">Regn rett før måling</string>
	<string name="snowcover">Snødekke</string>
	<string name="microGyh">uGy/h</string>
	<string name="milliGyh">mGy/h</string>
	<string name="snowunit">cm</string>
	<string name="pref_radiacpatrulje">Radiacpatrulje</string>
	<string name="pref_radiacpatrulje_summary"></string>
	
	<string name="pref_user_name">Navn</string>
	<string name="pref_user_name_summary"></string>
	<string name="pref_distict">Distrikt</string>
	<string name="pref_settings">Instillinger</string>
	<string name="pref_timeout">Tidsavbrudd</string>
	<string name="pref_timeout_summary"></string>
	<string name="menu_settings">Innstillinger</string>
	<string name="menu_upload">Last opp</string>
	<string name="pref_unlockkey">Nøkkel</string>
	<string name="pref_unlockkey_summary">Lås opp applikasjon</string>
	<string name="lockedAppErr">Appen er låst. Kontakt ditt sivilforsvarsdistrikt for å få en opplåsingskode.</string>
	<string name="menu_resetui">Start ny måling</string>
	<string name="yes">Ja</string>
	<string name="no">Nei</string>
	<string name="resetmeasure">Avslutt måling? Registrerte data blir slettet!</string>
	<array name="unitItems">
		<item></item>
		<item>nGy/h</item>
		<item>uGy/h</item>
		<item>mGy/h</item>
	</array>
	<array name="projections">
		<item>UTM</item>
		<item>Geografisk</item>
	</array>
	<array name="sampletypes">
		<item>Vann</item>
		<item>Jord</item>
		<item>Vegetasjon</item>
		<item>Snø</item>
	</array>
	<string  name="projection">Koordinattype</string>
	<string name="unitPrompt">Måleenhet</string>
	<string name="utmZone">UTM sone</string>
	<string name="GPSServiceNotAvailable">GPS er ikke tilgjengelig</string>
	<string name="GPSLocationNotAvailable">Har ikke GPSposisjon</string>
	<string name="menu_readgps">Hent GPSposisjon</string>
	<string name="menu_unlock">Lås opp skjema</string>
	<string name="noDataFound">Ingen data å lese</string>
	<string name="setsNotUploaded">målinger som ikke er lastet opp</string>
	<string name="jsonerror">Kan ikke håndtere innlagte data</string>

    <string name="title_activity_samplereg">Prøveregistrering</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="startregister">Start registrering</string>
	<string name="stopregister">Stopp registering</string>
	<string name="name">Navn</string>
	<string name="weatherObs">Vær- observasjoner</string>
	<string name="areaObs">Område- observasjoner</string>
	<string name="samplingTime">Tidspunkt</string>
	<string name="sampleNumber">Prøvenummer</string>
	<string name="background">Bakgrunnsstråling</string>
	<string name="snowSampleData">For snøprøve</string>
	<string name="kg">kg</string>
	<string name="l">l</string>
	<string name="sex">Kjønn</string>
	<string name="age">Alder</string>
	<string name="title_activity_doseregistration">Doseregistrering</string>
	<string name="dose">Dose</string>
	<string name="from">Fra</string>
	<string name="to">Til</string>
	<string name="measResult">Måleresultat</string>
	<string name="needsCleaning">Trenger rensing</string>
	<string name="total">Totalt</string>
    <string name="title_activity_measurement_protocol">Måleprotokoll</string>
	</resources>
