<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences" />
    <item
        android:id="@+id/menu_upload"
        android:title="@string/menu_upload" />
	<item
		android:id="@+id/menu_resetui"
		android:title="@string/menu_resetui" />
   <item
        android:id="@+id/menu_readgps"
        android:title="@string/menu_readgps" />
	<item
        android:id="@+id/menu_unlock"
        android:title="@string/menu_unlock" />
	<item 
		android:id="@+id/menu_samplereg"
		android:title="@string/menu_samplereg"/>
	<item 
		android:id="@+id/menu_dosereg"
		android:title="@string/menu_dosereg"/>
	<item 
		android:id="@+id/menu_contamreg"
		android:title="@string/menu_contamreg"/>
	
	
</menu>
