<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <!--  <PreferenceCategory
        android:summary="@string/uploaddata"
        android:title="@string/uploaddata">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="doUpload"
            android:summary="@string/upload"
            android:title="@string/upload" />
        <EditTextPreference
            android:defaultValue="http://hhv3.sickel.net/obstest/"
            android:dependency="doUpload"
            android:dialogTitle="@string/uploadurl"
            android:key="uploadURL"
            android:summary="@string/uploadurl"
            android:title="@string/uploadurl" />
    </PreferenceCategory>
   -->
    <PreferenceCategory
        android:summary="@string/pref_settings"
        android:title="@string/pref_settings">
       
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/pref_user_name"
            android:key="userName"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/pref_radiacpatrulje"
            android:key="projectName"
            android:summary="@string/pref_radiacpatrulje_summary"
            android:title="@string/pref_radiacpatrulje" />
		<EditTextPreference
            android:defaultValue="20"
            android:dialogTitle="@string/pref_timeout"
            android:inputType="number"
            android:key="pref_timeout"
            android:summary="@string/pref_timeout_summary"
            android:title="@string/pref_timeout" />
<!--		<EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/pref_unlockkey"
            android:key="pref_unlockkey"
            android:summary="@string/pref_unlockkey_summary"
            android:title="@string/pref_unlockkey" />-->
		<ListPreference android:title="Group Choice Test "
			android:entries="@array/unitItems"
			android:entryValues="@array/unitItems"
			android:dialogTitle="Choose an option please">
		</ListPreference>
	</PreferenceCategory>
    <!--Any other categories include here
    -->
</PreferenceScreen>
