<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation ="horizontal">
        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btStartRegister"
            android:onClick="onMeasureStart"
            android:text="@string/startregister" />
        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btStopRegister"
            android:enabled="false"
            android:onClick="onMeasureStop"
            android:text="@string/stopregister" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation ="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/etPerson"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation ="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/sex"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/etSex"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/etAge"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation ="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/measResult"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/etTimeFrom"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="S-1"/>

         <CheckBox
            android:id="@+id/cbRainBefore"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/needsCleaning"
            android:onClick="onMeastypeClicked"		/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation ="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/comment"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/etComment"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation ="horizontal">
        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="confirm"
            android:id="@+id/btConfirm"
            android:enabled="false"
            android:text="@string/confirm" />
        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="undo"
            android:enabled="false"
            android:id="@+id/btUndo"
            android:text="@string/undo" />
    </LinearLayout>

</LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

