
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <Button
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btStartRegisterSample"
                android:onClick="onMeasureStart"
                android:text="@string/startregister" />
            <Button
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btStopRegister"
                android:enabled="false"
                android:onClick="onMeasureStop"
                android:text="@string/stopregister" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Sampletype"
                android:id="@+id/tvSampletype" />

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/spSampletype"
				android:entries="@array/sampletypes"
				/>


            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/tvSampleNumber"
                android:layout_height="wrap_content"
                android:text="@string/sampleNumber"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:id="@+id/etSampleNumber"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/LocName"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="7"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/etLocname"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2
            "
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/areaObs"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="7"
                android:enabled="false"
                android:layout_height="match_parent"
                android:id="@+id/etAreaObservation"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/weatherObs"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="7"
                android:enabled="false"
                android:layout_height="match_parent"
                android:id="@+id/etWeatherObservation"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/comment"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="7"
                android:enabled="false"
                android:layout_height="match_parent"
                android:id="@+id/etComment"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/background"/>
            <EditText
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:id="@+id/etBackground"/>
            <Spinner
                android:id="@+id/spUnit"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:entries="@array/unitItems"
                android:enabled="false"
                android:prompt="@string/unitPrompt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/snowSampleData"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/etWeight"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/kg"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/etSnowVolume"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/l"/>

        </LinearLayout><View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/samplingTime"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/etSamplingTime"/>
           
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/lontext"
                android:layout_height="wrap_content"
                android:text="@string/longitude"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/etSampLongitude"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/north"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/lattext"
                android:layout_height="wrap_content"
                android:text="@string/latitude"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/etSampLatitude"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/east"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/zonetext"
                android:layout_height="wrap_content"
                android:text="@string/utmZone"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:id="@+id/etUTMZone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation ="horizontal">
            <Button
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="confirm"
                android:id="@+id/btConfirm"
                android:enabled="false"
                android:text="@string/confirm" />
            <Button
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="undo"
                android:enabled="false"
                android:id="@+id/btUndo"
                android:text="@string/undo" />
        </LinearLayout>

    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

